--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/yonarbel/create-package-example#readme",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "1.0.0"
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "jest": "12.1.0"
   }
 }
