--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frog-utils",
   "version": "1.0.0",
-  "description": "Add a frog emoji to a given string and do some more frog stuff related 🐸",
+  "description": "x Add a frog emoji to a given string and do some more frog stuff related 🐸",
   "main": "index.js",
   "scripts": {
     "test": "cd tests && jest"
