--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,4 +1,4 @@
-name: Frogbot Scan Pull Request
+name: "Frogbot Scan Pull Request"
 on:
   pull_request_target:
     types: [ opened, synchronize ]
@@ -24,8 +24,8 @@ jobs:
 
       - uses: jfrog/frogbot@v2
         with:
-          oidc-provider-name: jfrog-github-oidc
-          oidc-audience: jfrog-github
+          oidc-provider-name: github-artifactory
+          # oidc-audience: jfrog-github
         env:
           JFROG_CLI_LOG_LEVEL: DEBUG
           # JFrog platform URL
