--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -27,9 +27,10 @@ jobs:
           oidc-provider-name: github-artifactory2
           oidc-audience: jfrog-github
         env:
-          # JFROG_CLI_LOG_LEVEL: DEBUG
+          JFROG_CLI_LOG_LEVEL: "DEBUG"
           # JFrog platform URL
-          JF_URL: ${{ vars.JF_URL }}/
+          JF_URL: ${{ vars.JF_URL }}
           JF_PROJECT: ${{ vars.JF_PROJECT }}
+          JF_ACCESS_TOKEN: "cmVmdGtuOjAxOjE3NDQxNTY1NDM6RUZ0Z1pkcUVKQ0w2OHV3S3RadUxjdG9jeTZI"
           # The GitHub token automatically generated for the job
           JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
