--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -24,8 +24,8 @@ jobs:
 
       - uses: jfrog/frogbot@v2
         with:
-          oidc-provider-name: github-artifactory2
-          oidc-audience: jfrog-github
+          oidc-provider-name: "github-artifactory2"
+          oidc-audience: "jfrog-github"
         env:
           JFROG_CLI_LOG_LEVEL: "DEBUG"
           # JFrog platform URL
