--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -24,7 +24,7 @@ jobs:
 
       - uses: jfrog/frogbot@v2
         with:
-          oidc-provider-name: github-artifactory2
+          oidc-provider-name: github-artifactory
           oidc-audience: jfrog-github
         env:
           JFROG_CLI_LOG_LEVEL: DEBUG
