--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "JFrog"
   ],
-  "author": "Hirofumi Iwashita5",
+  "author": "Hirofumi Iwashita",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/iwashitah/create-package-example/issues"
