--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -34,3 +34,4 @@ jobs:
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
           # The GitHub token automatically generated for the job
           JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JF_DEPS_REPO: "proj1-npm-virtual"
