--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -9,6 +9,10 @@ permissions:
 jobs:
   scan-pull-request:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # The repository scanning will be triggered periodically on the following branches.
+        branch: ["dev"]
     # A pull request needs to be approved, before Frogbot scans it. Any GitHub user who is associated with the
     # "frogbot" GitHub environment can approve the pull request to be scanned. test
     # Read more here (Install Frogbot Using GitHub Actions): https://github.com/jfrog/frogbot/blob/master/docs/install-github.md
