--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,4 +1,4 @@
-name: "Frogbot Scan Pull Request test"
+name: "Frogbot Scan Pull Request"
 on:
   pull_request_target:
     types: [ opened, synchronize ]
