--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -9,10 +9,10 @@ permissions:
 jobs:
   scan-pull-request:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
+    #strategy:
+      #matrix:
         # The repository scanning will be triggered periodically on the following branches.
-        branch: ["main"]
+        #branch: ["main"]
     # A pull request needs to be approved, before Frogbot scans it. Any GitHub user who is associated with the
     # "frogbot" GitHub environment can approve the pull request to be scanned. test
     # Read more here (Install Frogbot Using GitHub Actions): https://github.com/jfrog/frogbot/blob/master/docs/install-github.md
@@ -38,5 +38,4 @@ jobs:
           #JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
           # The GitHub token automatically generated for the job
           JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JF_GIT_REPO: ${{ github.repository }}
-          JF_GIT_BASE_BRANCH: ${{ matrix.branch }}
+          #JF_GIT_BASE_BRANCH: ${{ matrix.branch }}
