--- a/.github/workflows/frogbot-repository-scan.yaml
+++ b/.github/workflows/frogbot-repository-scan.yaml
@@ -145,5 +145,6 @@ jobs:
 
         # [Mandatory if using OIDC authentication protocol instead of JF_ACCESS_TOKEN]
         # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
-        # with:
-        #   oidc-provider-name: ""
+        with:
+          oidc-provider-name: github-artifactory
+          oidc-audience: jfrog-github
