--- a/.github/workflows/frogbot-repository-scan.yaml
+++ b/.github/workflows/frogbot-repository-scan.yaml
@@ -23,7 +23,7 @@ jobs:
           JFROG_CLI_LOG_LEVEL: DEBUG
           # [Mandatory]
           # JFrog platform URL
-          JF_URL: ${{ vars..JF_URL }}
+          JF_URL: ${{ vars.JF_URL }}
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
